# cuda-api-wrappers

./: .codedocs  .gitignore  .hgignore  .travis.yml  CMakeLists.txt  LICENSE  LICENSE.md  README.md  doxygen.cfg  test.txt
.github/: FUNDING.yml
.github/action-scripts/: install-cuda-ubuntu.sh  install-cuda-windows.ps1
.github/workflows/: cmake-build-linux.yml  cmake-build-windows.yml
cmake/: cuda-api-wrappers-config.cmake  cuda-api-wrappers-config.cmake.in  cuda-api-wrappersConfig.cmake.in
cmake/Modules/: CompileWithWarnings.cmake  FindCUB.cmake  FindCUDAAPIWrappers.cmake  FindNCCL.cmake  FindNVSHMEM.cmake  HandleCUDAComputeCapability.cmake  ReleaseOrDebug.cmake
cmake/Modules/sugar/: sugar_generate_warning_flags.cmake
docs/: doxygen_extra.css
examples/: CMakeLists.txt  check_cuda.cu  common.hpp  enumerate.hpp  rtc_common.hpp  string_view.hpp  zip.hpp
examples/by_api_module/: context_management.cpp  device_management.cpp  error_handling.cu  event_management.cu  execution_control.cu  ipc.cpp  kernel_argument.cu  memory_pools.cpp  module_management.cpp  stream_management.cu  unified_addressing.cpp  version_management.cpp
examples/by_driver_api_module/: context_management.cpp
examples/by_runtime_api_module/: array_management.cu  device_management.cpp  error_handling.cu  event_management.cu  execution_control.cu  ipc.cpp  stream_management.cu  unified_addressing.cpp  version_management.cpp
examples/cmake/Modules/: CompileWithWarnings.cmake
examples/modified_cuda_samples/: helper_cuda.h  helper_cuda.hpp  helper_string.h  helper_timer.h
examples/modified_cuda_samples/asyncAPI/: asyncAPI.cu
examples/modified_cuda_samples/bandwidthtest/: bandwidthtest.cpp
examples/modified_cuda_samples/binaryPartitionCG/: binaryPartitionCG.cu
examples/modified_cuda_samples/clock_nvrtc/: clock.cpp
examples/modified_cuda_samples/graphMemoryNodes/: graphMemoryNodes.cu
examples/modified_cuda_samples/inlinePTX/: inlinePTX.cu  ptx.cuh
examples/modified_cuda_samples/jacobiCudaGraphs/: jacobi.cu  jacobi.h  jacobi_kernels.cuh  main.cpp
examples/modified_cuda_samples/matrixMulCUBLAS/: matrixMulCUBLAS.cpp
examples/modified_cuda_samples/memMapIPCDrv/: child.cpp  helper_multiprocess.cpp  helper_multiprocess.h  memMapIPC.cpp  memMapIPC.hpp  memMapIPC_kernel.cu  parent.cpp
examples/modified_cuda_samples/p2pBandwidthLatencyTest/: p2pBandwidthLatencyTest.cu
examples/modified_cuda_samples/simpleCudaGraphs/: simpleCudaGraphs.cu
examples/modified_cuda_samples/simpleDrvRuntimePTX/: simpleDrvRuntimePTX.cpp
examples/modified_cuda_samples/simpleIPC/: simpleIPC.cu
examples/modified_cuda_samples/simpleStreams/: simpleStreams.cu  simpleStreams.cu.bkp2
examples/modified_cuda_samples/simpleTextureDrv/: helper_image.h  simpleTextureDrv.cpp  simpleTexture_kernel.cu
examples/modified_cuda_samples/streamOrderedAllocation/: streamOrderedAllocation.cu
examples/modified_cuda_samples/streamOrderedAllocationIPC/: helper_multiprocess.cpp  helper_multiprocess.h  streamOrderedAllocationIPC.cu
examples/modified_cuda_samples/streamOrderedAllocationP2P/: streamOrderedAllocationP2P.cu
examples/modified_cuda_samples/vectorAdd/: vectorAdd.cu
examples/modified_cuda_samples/vectorAddMMAP/: vectorAddMMAP.cpp  vectorAdd_kernel.cu
examples/modified_cuda_samples/vectorAddManaged/: vectorAddManaged.cu
examples/modified_cuda_samples/vectorAddMapped/: vectorAddMapped.cu
examples/modified_cuda_samples/vectorAdd_nvrtc/: vectorAdd_nvrtc.cpp
examples/modified_cuda_samples/vectorAdd_ptx/: vectorAdd_ptx.cpp
examples/modified_cuda_samples/vectorAdd_unique_regions/: vectorAdd_unique_regions.cu
examples/multi-gpu-programming-models/: CMakeLists.txt  LICENSE.md  README.md  bench.sh  test.sh
examples/multi-gpu-programming-models/mpi_basic/: jacobi.cpp  jacobi.cpp.awarecheck  jacobi_kernels.cu  mpi
examples/multi-gpu-programming-models/mpi_overlap/: jacobi.cpp
examples/multi-gpu-programming-models/multi_threaded_copy/: jacobi.cu
examples/multi-gpu-programming-models/multi_threaded_copy_overlap/: jacobi.cu
examples/multi-gpu-programming-models/multi_threaded_p2p/: jacobi.cu
examples/multi-gpu-programming-models/multi_threaded_p2p_opt/: jacobi.cu
examples/multi-gpu-programming-models/multi_threaded_um/: jacobi.cu
examples/multi-gpu-programming-models/nccl_basic/: jacobi.cpp
examples/multi-gpu-programming-models/nccl_overlap/: jacobi.cpp  jacobi_kernels.cu
examples/multi-gpu-programming-models/nvshmem_basic/: jacobi.cu
examples/multi-gpu-programming-models/nvshmem_opt/: jacobi.cu
examples/multi-gpu-programming-models/single_gpu/: jacobi.cu
examples/multi-gpu-programming-models/single_threaded_copy/: jacobi.cu
examples/other/: array_management.cu  chunks_in_streams.cu  io_compute_overlap_with_streams.cu  isfinite_microbenchmark.cu  kernel_argument_validity.cu  manipulate_current_device.cu  runtime_api_header_collection.cpp  vectorAdd_profiled.cu
examples/other/clock_rate_play/: clock_rate_play.cpp
examples/other/cpp_14/: main.cpp
examples/other/inclusion_in_two_translation_units/: main.cpp  second_tu.cpp
examples/other/jitify/: constant_header.cuh  jitify.cpp  my_header1.cuh  my_header2.cuh  my_header3.cuh  string_view.hpp  type_name.hpp
examples/other/new_cpp_standard/: main.cpp
examples/scripts/: run-all-examples
scripts/: get_cuda_sm.sh
src/cuda/: api.hpp  api_wrappers.h  api_wrappers.hpp  define_specifiers.hpp  fatbin.hpp  nvml.hpp  nvrtc.hpp  nvtx.hpp  rtc.hpp  runtime_api.hpp  undefine_specifiers.hpp
src/cuda/api/: apriori_compiled_kernel.hpp  array.hpp  common_ptx_compilation_options.hpp  constants.h  constants.hpp  context.hpp  copy_parameters.hpp  current_context.hpp  current_device.hpp  demangle.hpp  device.cpp  device.hpp  device_count.hpp  device_function.hpp  device_properties.cpp  device_properties.hpp  devices.hpp  error.hpp  event.hpp  external.hpp  ipc.hpp  kernel.hpp  kernel_launch.cuh  kernel_launch.hpp  launch_config_builder.hpp  launch_configuration.hpp  library.hpp  link.hpp  link_options.hpp  memory.hpp  memory_device_impls.hpp  pci_id.h  (+25 more)
(+95 files in other folders)
